# ChessEngine

./: .gitmodules  CMakeLists.txt  README.md
Assets/shaders/: sprite.fragment  sprite.vertex  tile.fragment  tile.vertex
Engine/: CMakeLists.txt  main.cc
Engine/common/: camera.cc  camera.h  character.cc  character.h  chess.cc  chess.h  engine.cc  engine.h  entity.cc  entity.h  sprite.cc  sprite.h
Engine/render/: gl_material.h  gl_render.cc  gl_render.h  gl_texture.cc  gl_texture.h  render_program.cc  render_program.h
Engine/states/: state.cpp  state.h  state_machine.cpp  state_machine.h
Engine/ui/: properties_viewport.cc  properties_viewport.h  scene_graph_viewport.cc  scene_graph_viewport.h  scene_viewport.cc  scene_viewport.h  spritemap_window.cc  spritemap_window.h  ui.cc  ui.h  viewport.h
Engine/utils/: singleton.h  types.h
